src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>FS_startDateTPR__c</fullName>
        <description>TPR Calculation: Indicates the start date for TPR</description>
        <label>Start Date TPR</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Future_potential_opportunities__c</fullName>
        <description>Are there branding opportunities with this customer? If so, have you reached 
to marketing? Is the branding impressions template included? 
Is the customer growing?</description>
        <inlineHelpText>Are there branding opportunities with this customer? If so, have you reached 
to marketing? Is the branding impressions template included? 
Is the customer growing?</inlineHelpText>
        <label>Future potential opportunities</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ICB_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Store the partner contact info.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ICB_OLD_QUANTITY_RETURNED__c</fullName>
        <label>Quantity Returned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ICB_Sales_Locale_List__c</fullName>
        <description>list of locales the contacts</description>
        <label>Sales Locale List</label>
        <picklist>
            <picklistValues>
                <fullName>Empty</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ICB_Sales_Locale__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Ice Cream Salesman sales location</description>
        <label>Sales Locale</label>
        <referenceTo>ICB_Sales_Locale__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ICB_Total_Sold_Price__c</fullName>
        <label>Total Sold Price</label>
        <summarizedField>OpportunityLineItem.ICB_Total_Purchase_Price__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Margin_Indicator__c</fullName>
        <formula>IF( 
FSNA_Gross_Margin__c &gt;= FSNA_Margin_Market_Target__c, 
IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 20, 20), 
IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;red&quot;, 20, 20) 
)</formula>
        <inlineHelpText>Green is opportunity exceeds targeted opportunity margin.</inlineHelpText>
        <label>Margin Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Biz_20K__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If new business, is the opportunity above 20K (US Only)?</description>
        <inlineHelpText>If new business, is the opportunity above 20K?</inlineHelpText>
        <label>If new business, is it min. 20K NSV?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NumberOfLocations__c</fullName>
        <label>Number Of Locations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rationale_for_funding_request__c</fullName>
        <description>Adding new SKUs?
Increasing rates on new SKUs?
How were allowances calculated? 
Is business at risk? 
Enter competitor pricing if available</description>
        <inlineHelpText>Adding new SKUs?
Increasing rates on new SKUs?
How were allowances calculated? 
Is business at risk? 
Enter competitor pricing if available</inlineHelpText>
        <label>Rationale for funding request?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ReasonWonLost__c</fullName>
        <description>This field is dependent with Sales Cycle</description>
        <label>Reason Won / Lost</label>
        <picklist>
            <controllingField>Sales_Cycle__c</controllingField>
            <picklistValues>
                <fullName>Converted To Another Pack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Innovation Presentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Match</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taste Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value-added Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discontinued Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost To Competition-Branded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Timeline Not Met</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer to GSC/ILT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost To Competition-PL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost To Competition-Custom</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <description>Reason when Opportunity is closed</description>
        <label>Reason</label>
        <picklist>
            <controllingField>StageName</controllingField>
            <picklistValues>
                <fullName>Lost To Competition-PL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taste Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost To Competition-Branded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discontinued Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost To Competition-Custom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Match</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Converted To Another Pack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Innovation Presentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer to GSC/ILT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Timeline Not Met</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value-added Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out Of Business</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Cycle__c</fullName>
        <label>Sales Cycle</label>
        <picklist>
            <picklistValues>
                <fullName>01 - Universe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02 - Above</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03 - In the Funnel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04 - Best Few</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05 - Won</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>00 - Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06 - Not Pursued</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07 - Deleted/Inactive Accts</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ShipToCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To lookup only distributor account</description>
        <label>Ship To Code</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2</booleanFilter>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Distributor</value>
            </filterItems>
            <filterItems>
                <field>Account.Parent.Id</field>
                <operation>equals</operation>
                <valueField>$Source.FS_distributor__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Ship To)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ShipmentVerified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shipment Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Opp_COGS__c</fullName>
        <description>Roll-up of Product Level COGS</description>
        <inlineHelpText>Total Cost of Product, production and supply chain related costs.</inlineHelpText>
        <label>Total Opportunity COGS</label>
        <summarizedField>OpportunityLineItem.FS_Copy_of_Total_COGS__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_3a_Won_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>3a-Won</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All &quot;3a-Won&quot; Opportunities</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>UFS_Russia</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Best_Few_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>04 - Verbal Commitment</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All &quot;04-Verbal Commitment&quot; Opportunities</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>North_America</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Won_Opportunities</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Won Opportunities</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>FS_All_Approved_TPR_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FS_TPRApproved__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Approved TPR Opportunities</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>UFS_Russia</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_3a_Won_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>3a-Won</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My &quot;3a-Won&quot; Opportunities</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>UFS_Russia</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_BestFew_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>04 - Verbal Commitment</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My &quot;04-Verbal Commitment&quot; Opportunities</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>North_America</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>FS_ExistingBusiness</fullName>
        <active>true</active>
        <businessProcess>NA FS Sales Process</businessProcess>
        <description>Food Solution record type to support MABE process</description>
        <label>NAFS Existing Business</label>
    </recordTypes>
    <recordTypes>
        <fullName>FS_OpportunityMABE</fullName>
        <active>true</active>
        <businessProcess>NA FS Sales Process</businessProcess>
        <description>Food Solution record type for USA</description>
        <label>NAFS Opportunity MABE</label>
    </recordTypes>
    <recordTypes>
        <fullName>FS_OpportunityTPR</fullName>
        <active>true</active>
        <businessProcess>RFS Sales Process</businessProcess>
        <description>UFS Opportunity Russia</description>
        <label>RUFS Opportunity TPR</label>
    </recordTypes>
    <recordTypes>
        <fullName>FS_OpportunityTPRReadOnly</fullName>
        <active>true</active>
        <businessProcess>RFS Sales Process</businessProcess>
        <label>RUFS Opportunity TPR ReadOnly</label>
    </recordTypes>
    <recordTypes>
        <fullName>ICB_Mobile_Channel</fullName>
        <active>true</active>
        <businessProcess>ICB Mobile Channel</businessProcess>
        <description>Ice cream sales record type to mobile channel Brazil.</description>
        <label>Mobile Channel</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>FS_AgreementdateIsRequired</fullName>
        <active>true</active>
        <description>Agreement Date Is Required Before Moving To Stage=&apos;05 – Won&apos;.</description>
        <errorConditionFormula>AND( ISCHANGED(StageName),ISPICKVAL(StageName,&apos;05 – Won&apos;),  ISBLANK(AgreementDate__c))</errorConditionFormula>
        <errorMessage>Enter Agreement Date Before Moving To Stage=&apos;05 – Won&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FS_EndDate_should_be_future_date</fullName>
        <active>true</active>
        <description>End Date should not be previous date before sending for approval.</description>
        <errorConditionFormula>RecordType.DeveloperName = &apos;FS_OpportunityTPR&apos; 
&amp;&amp; NOT ( FS_TPRApproved__c ) 
&amp;&amp; NOT ( ISBLANK ( FS_endDateTPR__c ))
&amp;&amp; FS_endDateTPR__c &lt;=  TODAY()</errorConditionFormula>
        <errorMessage>End Date TPR should not be on previous date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FS_OpportunityColsedDateInFutureDate</fullName>
        <active>true</active>
        <description>Record should throw error and close date will be in future date</description>
        <errorConditionFormula>AND(OR ( ISNEW(),ISCHANGED( CloseDate )),CloseDate &lt; TODAY())</errorConditionFormula>
        <errorMessage>Close Date cannot be past date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FS_StartDate_should_be_future_date</fullName>
        <active>true</active>
        <description>Start date should not be previous date before sending for approval.</description>
        <errorConditionFormula>RecordType.DeveloperName = &apos;FS_OpportunityTPR&apos; 
&amp;&amp; NOT ( FS_TPRApproved__c ) 
&amp;&amp; NOT ( ISBLANK (FS_startDateTPR__c))
&amp;&amp; FS_startDateTPR__c &lt;=  TODAY()</errorConditionFormula>
        <errorMessage>Start Date TPR should not be on previous date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Opportunity_For_Reason_Description</fullName>
        <active>true</active>
        <description>when select the Stage = Closed Lost, Closed Won, Not Pursued, Lost Existing Business, Replace Existing Business, It should be required to populate a text box called Reason Description. Populate Reason Description means NOT NULL.</description>
        <errorConditionFormula>IF(
AND( OR(ISPICKVAL(StageName, &quot;Closed Lost&quot;), ISPICKVAL(StageName, &quot;Closed Won&quot;), ISPICKVAL(StageName, &quot;Not Pursued&quot;), ISPICKVAL(StageName, &quot;Lost Existing Business&quot;), ISPICKVAL(StageName, &quot;Replace Existing Business&quot;)),
LEN(FS_ReasonDescription__c) = 0), True, False)</errorConditionFormula>
        <errorMessage>Enter valid reason in the Reason Description field according to the selection of Stage field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Opportunity_Notchange_at_Stage4</fullName>
        <active>true</active>
        <description>An opportunity at stage 04 - Verbal Commitment  can not be changed at the opportunity level.</description>
        <errorConditionFormula>(AND( DealApproved__c= true,OR(ISPICKVAL( StageName, &quot;01 - Prospecting&quot;), ISPICKVAL( StageName, &quot;02 - Qualification&quot;),ISPICKVAL( StageName, &quot;03 - Proposal&quot;))))</errorConditionFormula>
        <errorMessage>An opportunity at stage 04 - Verbal Commitment  can not be changed at the opportunity level.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Opportunity_Notchange_at_Stage5</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR(ISPICKVAL(PRIORVALUE(StageName), &quot;Closed Won&quot;), ISPICKVAL(PRIORVALUE(StageName), &quot;05 – Won&quot;)))</errorConditionFormula>
        <errorMessage>An opportunity at stage 05 - Won/Closed Won  can not be changed at the opportunity level.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Opportunity_Stage_Based_on_Prior_Value</fullName>
        <active>true</active>
        <description>To Validate Opportunity Stage Value</description>
        <errorConditionFormula>AND(  ISCHANGED(StageName),ISPICKVAL(StageName,&apos;05 – Won&apos;), NOT(ISPICKVAL(PRIORVALUE(StageName),&quot;04 - Verbal Commitment&quot;)))</errorConditionFormula>
        <errorMessage>You must save the opportunity in Stage 04 - Verbal Commitment before advancing to Stage 05 - Won</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Opportunity_Validation_for_Stage_4</fullName>
        <active>true</active>
        <description>Opportunities must be approved in order to advance it to 04 - Verbal Commitment</description>
        <errorConditionFormula>IF( ISPICKVAL(StageName,&apos;04 - Verbal Commitment&apos;),  NOT( DealApproved__c =true) , false)</errorConditionFormula>
        <errorMessage>Opportunities must be approved in order to advance it to 04 - Verbal Commitment</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Opportunity_for_Stage_3</fullName>
        <active>true</active>
        <description>It is used to prevent Opportunity from being updated with &apos;03-Proposal&apos; Stage without any Product selected.</description>
        <errorConditionFormula>IF( ISPICKVAL( StageName , &apos;03 - Proposal&apos;) ,  HasOpportunityLineItem=false,false)</errorConditionFormula>
        <errorMessage>An opportunity at stage 03 must have at least one line item. Please add a line item to your opportunity in stage 03, then submit for approval.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Opportunity_for_Stage_5</fullName>
        <active>true</active>
        <description>Opportunities must be approved in order to advance it to 05 - Won</description>
        <errorConditionFormula>IF(ISPICKVAL(StageName,&apos;05 – Won&apos;),  NOT( DealApproved__c =true) , false)</errorConditionFormula>
        <errorMessage>Opportunities must be approved in order to advance it to 05 - Won</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Record_Locked_Validation</fullName>
        <active>true</active>
        <description>Validation for approved TPR record.</description>
        <errorConditionFormula>IF($Permission.FS_Admin,
     false, 
     IF ( RecordType.DeveloperName = &apos;FS_OpportunityTPRReadOnly&apos;
       &amp;&amp; ( ISCHANGED(Name)  
          || ISCHANGED( CurrencyIsoCode ) 
          || ISCHANGED( CloseDate )
          || ISCHANGED(OwnerId)
           ),
           true,
           false 
         )
)</errorConditionFormula>
        <errorMessage>Opportunity is already locked for update.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_Cases_Pieces_field</fullName>
        <active>false</active>
        <description>Use for validating required fields in TPR section.</description>
        <errorConditionFormula>RecordType.DeveloperName = &apos;FS_OpportunityTPR&apos;  
&amp;&amp; ISBLANK( TEXT( FS_casesPiece__c ) )
&amp;&amp; ( NOT( ISBLANK( ShipToCode__c ) )
     || NOT( ISBLANK( TEXT( FS_internalOrder__c )) )
     || NOT( ISBLANK( FS_startDateTPR__c ) )
     || NOT( ISBLANK( FS_endDateTPR__c ) )
     || NOT( ISBLANK( FS_Comment__c ) ) 
)</errorConditionFormula>
        <errorMessage>Cases / Pieces is a required field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_Comment_field</fullName>
        <active>true</active>
        <description>Use for validating required fields in TPR section.</description>
        <errorConditionFormula>RecordType.DeveloperName = &apos;FS_OpportunityTPR&apos; 
&amp;&amp; ISBLANK( FS_Comment__c )  
&amp;&amp; ( NOT( ISBLANK( ShipToCode__c ) )
     || NOT( ISBLANK( TEXT( FS_internalOrder__c ) ) )
     || NOT( ISBLANK( FS_startDateTPR__c ) )
     || NOT( ISBLANK( FS_endDateTPR__c ) )
    )</errorConditionFormula>
        <errorMessage>Comment is a required field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_Distributor_field</fullName>
        <active>true</active>
        <description>Use for validating required fields in TPR section.</description>
        <errorConditionFormula>RecordType.DeveloperName = &apos;FS_OpportunityTPR&apos; 
&amp;&amp; ISBLANK( FS_distributor__c ) 
&amp;&amp; ( NOT( ISBLANK( ShipToCode__c ) )
     || NOT( ISBLANK( TEXT( FS_internalOrder__c )) )
     || NOT( ISBLANK( FS_startDateTPR__c ) )
     || NOT( ISBLANK( FS_endDateTPR__c ) )
     || NOT( ISBLANK( FS_Comment__c ) ) 
    )</errorConditionFormula>
        <errorMessage>Distributor is a required field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_End_Date_TPR</fullName>
        <active>true</active>
        <description>Use for validating required fields in TPR section.</description>
        <errorConditionFormula>RecordType.DeveloperName = &apos;FS_OpportunityTPR&apos;  
&amp;&amp; ISBLANK( FS_endDateTPR__c )
&amp;&amp; ( NOT( ISBLANK( ShipToCode__c ) )
     || NOT( ISBLANK( TEXT( FS_internalOrder__c )) )
     || NOT( ISBLANK( FS_startDateTPR__c ) )
     || NOT( ISBLANK( FS_Comment__c ) ) 
    )</errorConditionFormula>
        <errorMessage>End Date TPR is a required field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_Internal_Order</fullName>
        <active>true</active>
        <description>Use for validating required fields in TPR section.</description>
        <errorConditionFormula>RecordType.DeveloperName = &apos;FS_OpportunityTPR&apos; 
&amp;&amp; ISBLANK(TEXT(FS_internalOrder__c))
&amp;&amp; ( NOT( ISBLANK( ShipToCode__c ) )
    || NOT( ISBLANK( FS_startDateTPR__c ) )
    || NOT( ISBLANK( FS_endDateTPR__c ) )
    || NOT( ISBLANK( FS_Comment__c ) ) 
    )</errorConditionFormula>
        <errorMessage>Internal Order is a required field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_Opportunity_Reason</fullName>
        <active>true</active>
        <description>set Opportunity Reason to required if Stage is set to 3b-Lost and 5c-Lost</description>
        <errorConditionFormula>RecordType.DeveloperName = &apos;FS_OpportunityTPRReadOnly&apos; 
&amp;&amp; ( 
    ISPICKVAL(StageName, &apos;3b-Lost&apos;)
 || ISPICKVAL(StageName, &apos;5c-Lost&apos;)
  )
&amp;&amp; (
    ISBLANK(TEXT(Reason__c))  
    || ISBLANK( FS_ReasonDescription__c ) 
   )</errorConditionFormula>
        <errorMessage>Reason and Reason Description are required fields</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_ShipToCode_Field</fullName>
        <active>true</active>
        <description>Use for validating required fields in TPR section..</description>
        <errorConditionFormula>RecordType.DeveloperName = &apos;FS_OpportunityTPR&apos;   
&amp;&amp; ISBLANK(ShipToCode__c)
&amp;&amp; ( NOT( ISBLANK( TEXT( FS_internalOrder__c )) )
     || NOT( ISBLANK( FS_startDateTPR__c ) )
     || NOT( ISBLANK( FS_endDateTPR__c ) )
     || NOT( ISBLANK( FS_Comment__c ) ) 
   )</errorConditionFormula>
        <errorMessage>Ship to Code value is a required field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_Start_Date_TPR</fullName>
        <active>true</active>
        <description>Use for validating required fields in TPR section.</description>
        <errorConditionFormula>RecordType.DeveloperName = &apos;FS_OpportunityTPR&apos; 
&amp;&amp; ISBLANK(FS_startDateTPR__c)
&amp;&amp; ( NOT( ISBLANK( ShipToCode__c ) )
    || NOT( ISBLANK( TEXT( FS_internalOrder__c )) )
    || NOT( ISBLANK( FS_endDateTPR__c ) )
    || NOT( ISBLANK( FS_Comment__c ) ) 
   )</errorConditionFormula>
        <errorMessage>Start Date TPR is a required field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Samples_Line_Items_Per_Opportunity</fullName>
        <active>true</active>
        <description>The number of samples SKUs that can be ordered should be limited to 10 per opportunity</description>
        <errorConditionFormula>IF(FS_NoOFSampleOrders__c &gt;10, true, false)</errorConditionFormula>
        <errorMessage>The number of samples SKUs that can be ordered should be limited to 10 per opportunity</errorMessage>
    </validationRules>
</CustomObject>